# Fire_Detector

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cv/: cv.cpp  cv.h  detector.cpp  detector.h
data_exchange/: base64.cpp  base64.h  data_exchange.cpp  data_exchange.h  media_server.cpp  media_server.h
mlx_90621/: bmp.c  bmp.h  mlx90621.c  mlx90621.h
